Changelog for JsonFormBuilder
=========================================

JsonFormBuilder 1.0.24-pl - 31st Aug 2014
=========================================
- Fix empty email field bug (was not possible to have a non required email ruled field until this fix).
- Add URL rule type (and added website address in full examples)
- A few small scss/css modifications in the assets folder.

JsonFormBuilder 1.0.23-pl - 25th July 2014
=========================================
- Fix to stop uppercase file extensions messing with fileExtValid checks.

JsonFormBuilder 1.0.22-pl - 8th June 2014
=========================================
- Bug fixes to stop a few warnings writing to the MODX error logs.

JsonFormBuilder 1.0.21-pl - 26th May 2014
=========================================
- Add ability to read and modify form action via get/setFormAction methods (handy for custom posts to non MODX resources).
- Remove old legacy posthook code.

JsonFormBuilder 1.0.20-pl - 8th May 2014
=========================================
- Added placeholders for JSON forms. Can now use placeholders such as [[++emailsender]] or [[+postVal.email_address]] etc.
- Added ability to add any attribute you like to a form element. You can now add class, placeholder etc using "extraElementAttribs":{"placeholder":"test","class":"testing"} with JSON or the setExtraElementAttribs() method.

JsonFormBuilder 1.0.19-pl - 30th Mar 2014
=========================================
- Add ability to disable spam protection.

JsonFormBuilder 1.0.18-pl - 10th Mar 2014
=========================================
- Form rules and conditions for JSON formats.
- Add example for manually handling form submission and checking validation.
- Restructure of validate/form build / js build.

JsonFormBuilder 1.0.17-pl - 10th Mar 2014
=========================================
- Basic JSON form example - In process of building JSON form processing.
- More JSON functions, specify now inline, add a file path or as a chunk.
