@@ -1,1 +1,1 @@
-1.0.24
+1.0.25
